--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Bienes Raices</title>
 </head>
@@ -12,7 +13,7 @@
 <body>
 
     <header class="site-header inicio">
-        <div class="contenedor">
+        <div class="contenedor contenido-header">
             <div class="barra">
                 <a href="/">
                     <img src="/img/logo.svg" alt="Logotipo de Bienes Raices">
@@ -31,112 +32,189 @@
         <!-- Contenedor -->
     </header>
 
-    <section>
-        <h2> Más Sobre Nosotros </h2>
+    <section class="contenedor seccion">
+        <h2 class="fw-300 centrar-texto"> Más Sobre Nosotros </h2>
 
 
-        <div>
-            <img src="img/icono1.svg" alt="Icono Seguridad">
-            <h3> Seguridad </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nihil consequuntur voluptates ad explicabo illum, eveniet quae distinctio, magnam blanditiis adipisci aliquid sit deleniti suscipit repellendus laborum est nesciunt nam.</p>
-        </div>
+        <div class="iconos-nosotros">
+            <div class="icono">
+                <img src="img/icono1.svg" alt="Icono Seguridad">
+                <h3> Seguridad </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nihil consequuntur voluptates ad explicabo illum, eveniet quae distinctio, magnam blanditiis adipisci aliquid sit deleniti suscipit repellendus laborum est nesciunt nam.</p>
+            </div>
 
-        <div>
-            <img src="img/icono2.svg" alt="Icono Mejor Precio">
-            <h3>El Mejor Precio</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, voluptatem saepe dicta quia recusandae harum deleniti hic veniam a accusamus perferendis, ad, alias voluptatibus adipisci! Atque nostrum mollitia ut quia.
-            </p>
-        </div>
+            <div class="icono">
+                <img src="img/icono2.svg" alt="Icono Mejor Precio">
+                <h3>El Mejor Precio</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, voluptatem saepe dicta quia recusandae harum deleniti hic veniam a accusamus perferendis, ad, alias voluptatibus adipisci! Atque nostrum mollitia ut quia.
+                </p>
+            </div>
 
 
-        <div>
-            <img src="img/icono3.svg" alt="Icono a Tiempo">
-            <h3>A tiempo</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, voluptatem saepe dicta quia recusandae harum deleniti hic veniam a accusamus perferendis, ad, alias voluptatibus adipisci! Atque nostrum mollitia ut quia.
-            </p>
+            <div class="icono">
+                <img src="img/icono3.svg" alt="Icono a Tiempo">
+                <h3>A tiempo</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, voluptatem saepe dicta quia recusandae harum deleniti hic veniam a accusamus perferendis, ad, alias voluptatibus adipisci! Atque nostrum mollitia ut quia.
+                </p>
+            </div>
         </div>
 
     </section>
-    <main>
+    <main class=" seccion contenedor">
 
-        <h2> Casas y Depas en Venta </h2>
+        <h2 class="fw-300 centrar-texto"> Casas y Depas en Venta </h2>
 
-        <div>
-            <img src="img/anuncio1.jpg" alt="Anuncio Casa en el Lago">
-            <h3> Casa de Lujo en el Lago </h3>
-            <p> Casa en el lago con excelente vista, acabados de lujo a un excelente precio </p>
-            <p> $3,000,000</p>
-            <a href="#">Ver Propiedad</a>
+        <div class="contenedor-anuncios">
+            <div class="anuncio">
+                <img src="img/anuncio1.jpg" alt="Anuncio Casa en el Lago">
+                <div class="contenido-anuncio">
+                    <h3> Casa de Lujo en el Lago </h3>
+                    <p> Casa en el lago con excelente vista, acabados de lujo a un excelente precio </p>
+                    <p class="precio"> $3,000,000</p>
+
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img src="img/icono_wc.svg" alt="icono WC">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <p>4</p>
+                        </li>
+                    </ul>
+                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                </div>
+            </div>
+
+            <div class="anuncio">
+                <img src="img/anuncio2.jpg" alt="Anuncio Casa de Lujo">
+                <div class="contenido-anuncio">
+                    <h3> Casa terminados de Lujo </h3>
+                    <p> Casa con diselo moderno, así como tecnología inteligente y amueblada </p>
+                    <p class="precio"> $2,000,000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img src="img/icono_wc.svg" alt="icono WC">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <p>4</p>
+                        </li>
+                    </ul>
+                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                </div>
+            </div>
+
+            <div class="anuncio">
+                <img src="img/anuncio3.jpg" alt="Anuncio Casa de Lujo">
+                <div class="contenido-anuncio">
+                    <h3> Casa con Alberca </h3>
+                    <p> Casa con alberca y acabados de Lujo en la ciudad, excelente oportunidad </p>
+                    <p class="precio"> $3,000,000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img src="img/icono_wc.svg" alt="icono WC">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <p>4</p>
+                        </li>
+                    </ul>
+                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                </div>
+            </div>
         </div>
 
-        <div>
-            <img src="img/anuncio2.jpg" alt="Anuncio Casa de Lujo">
-            <h3> Casa terminados de Lujo </h3>
-            <p> Casa con diselo moderno, así como tecnología inteligente y amueblada </p>
-            <p> $2,000,000</p>
-            <a href="#">Ver Propiedad</a>
+        <div class="ver-todas">
+            <a href="anuncios.html" class="boton boton-verde">Ver Todas</a>
         </div>
-
-        <div>
-            <img src="img/anuncio3.jpg" alt="Anuncio Casa de Lujo">
-            <h3> Casa con Alberca </h3>
-            <p> Casa con alberca y acabados de Lujo en la ciudad, excelente oportunidad </p>
-            <p> $3,000,000</p>
-            <a href="#">Ver Propiedad</a>
-        </div>
-
-        <a href="anuncios.html">Ver Todas</a>
     </main>
 
-    <section>
-        <h2> Encuentra la casa de tus sueños </h2>
-        <p>Llena el formulario de Contacto y un asesor se prondrá en contacto contigo a la brevedad </p>
+    <section class="imagen-contacto">
+        <div class="contenedor contenido-contacto">
+            <h2> Encuentra la casa de tus sueños </h2>
+            <p>Llena el formulario de Contacto y un asesor se prondrá en contacto contigo a la brevedad </p>
 
-        <a href="contactos.html">Contactanos</a>
+            <a href="contactos.html" class="boton boton-amarillo">Contactános</a>
+        </div>
     </section>
+    <div class="seccion-inferior contenedor seccion">
 
-    <section>
-        <h3> Nuestro Blog</h3>
+        <section class="blog">
+            <h3 class="centrar-texto fw-300"> Nuestro Blog</h3>
 
-        <article>
-            <img src="img/blog1.jpg" alt="Entrada Blog 1">
-            <h4> Terraza en el techo de tu casa </h4>
-            <p> Escrito el: <em>20/10/2019</em> por : <em>Admin</em> </p>
-            <p> Consejos para constuir una terraza en el techo de tu casa, con los mejores materiales y ahorrando dinero
-            </p>
-        </article>
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <img src="img/blog1.jpg" alt="Entrada Blog 1">
+                </div>
+                <div class="texto-entrada">
+                    <a href="#">
+                        <h4> Terraza en el techo de tu casa </h4>
+                    </a>
+                    <p> Escrito el: <span>20/10/2019</span> por : <span>Admin</span> </p>
+                    <p> Consejos para constuir una terraza en el techo de tu casa, con los mejores materiales y ahorrando dinero
+                    </p>
+                </div>
+            </article>
 
-        <article>
-            <img src="img/blog2.jpg" alt="Entrada Blog 2">
-            <h4> Guía para la decoración de tu hogar </h4>
-            <p> Escrito el: <em>20/10/2019</em> por : <em>Admin</em> </p>
-            <p> Maximiza el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio.
-            </p>
-        </article>
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <img src="img/blog2.jpg" alt="Entrada Blog 2">
+                </div>
+                <div class="texto-entrada">
+                    <a href="#">
+                        <h4> Guía para la decoración de tu hogar </h4>
+                    </a>
+                    <p> Escrito el: <span>20/10/2019</span> por : <span>Admin</span> </p>
+                    <p> Maximiza el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio.
+                    </p>
+                </div>
+            </article>
 
-    </section>
+        </section>
 
-    <section>
+        <section class="testimoniales">
 
-        <h3> Testimoniales </h3>
-        <blockquote>
-            El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis expectativas
-        </blockquote>
+            <h3 class="centrar-texto fw-300"> Testimoniales </h3>
+            <div class="testimonial">
+                <blockquote>
+                    El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis expectativas
+                </blockquote>
 
-        <p>
-            - Sergio Osorio
-        </p>
-    </section>
-    <footer>
+                <p>
+                    - Sergio Osorio
+                </p>
+            </div>
+        </section>
+    </div>
+    <footer class="site-footer seccion">
 
-        <p> Todos los Derechos Reservados &copy; </p>
+        <div class="contenedor contenedor-footer">
 
-        <nav class="navegacion">
-            <a href="nosotros.html">Nosotros</a>
-            <a href="anuncios.html">Anuncios</a>
-            <a href="blog.html">Blog</a>
-            <a href="contacto.html">Contacto</a>
-        </nav>
+
+            <nav class="navegacion">
+                <a href="nosotros.html">Nosotros</a>
+                <a href="anuncios.html">Anuncios</a>
+                <a href="blog.html">Blog</a>
+                <a href="contacto.html">Contacto</a>
+            </nav>
+
+            <p class="copyright"> Todos los Derechos Reservados &copy; </p>
+        </div>
 
     </footer>
 
